--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,118 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,400;0,700;0,900;1,100&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,100&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;1,300;1,400&display=swap');
+
+@layer components {
+	.links-menu {
+		@apply flex items-center justify-center h-full transition duration-200 after:transition-all after:duration-200  after:bg-primary after:w-0 after:h-0.5 after:absolute after:left-0 after:bottom-0 hover:after:w-full hover:text-white
+	}
+
+	.button-gradient {
+		@apply bg-gradient-to-r from-primary to-secondary 
+	}
+
+	.button-gradient-hover {
+		@apply bg-gradient-to-r from-secondary to-primary   
+	}
+
+	.list-custom-bullet {
+		@apply before:content-["\2022"] before:text-primary before:inline-block before:font-bold before:mr-3
+	}
+
+	 #__next {
+        @apply h-full bg-secondary100;
+    }
+    html,
+    body {
+        @apply h-full;
+    }
+
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	font-size: 100%;
+	font-family: "Lato", "Poppins", sans-serif;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+
+html {
+	scroll-behavior: smooth;
+}
+
+body {
+	line-height: 1;
+}
+
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: 0;
+  -webkit-text-fill-color: #fff !important;
+	font-family: "Lato", "Poppins", sans-serif;
+  -webkit-box-shadow: 0 0 0px 1000px #3f3f46 inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+.scrollbar::-webkit-scrollbar {
+  width: 5px;
+}
+
+.scrollbar::-webkit-scrollbar-track {
+	background-color: transparent;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+	background-color: #52525b;
+	border-radius: 9999px;
 }
