--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;1,300;1,400&display=swap');
 
 @layer components {
-	.links-menu {
+	.links-menu, .button {
 		@apply flex items-center justify-center h-full transition duration-200 after:transition-all after:duration-200  after:bg-primary after:w-0 after:h-0.5 after:absolute after:left-0 after:bottom-0 hover:after:w-full hover:text-white
 	}
 
